src/test/ui/issues/issue-12028.stderr
error[E0284]: type annotations needed
  --> $DIR/issue-12028.rs:27:14
   |
LL |         self.input_stream(&mut stream);
   |              ^^^^^^^^^^^^ cannot infer type for type parameter `H` declared on the trait `StreamHash`
   |
   = note: cannot satisfy `<_ as StreamHasher>::S == <H as StreamHasher>::S`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0284`.
